TODO:
- Make a MUTEST { ... } macro to surround the test.
  - Make it nestable?
- Do I still use __func__?
- Add routine to parse cmdline args.
  --test will initiate unit testing (optional arg).
     --list lists unit tests,
	 --skip or --run to select tests to run,
	 --verbose to dump a lot of info?  Maybe no need for this one.
	 --brittle to exit on the first failure and not try further tests.
- Add some functional tests to check the command line arguments.
- Make sure to try compiling with gcc set to pedantic C99 as well.
- Add support for the NOTESTS macro.
- Make tests check for signals.  int/fp /0 and bus errors.
- Add the ability to temporarily disable tests but leave them in the test deck.
- Add ability to specify an optional timeout.
- There's got to be a better API than show_inversions

Version ??, 28 Feb 2007 - ?
- Created test flavors.  Now it's easy for people to customize their asserts.
- Split mutest from tmtest's zutest.c/.h files.

Version 0.7,  16 Feb 2007
- turn dependency tree into functions

Version 0.62, 22 Jan 2007
- clean up failure messages

Version 0.61, 30 Apr 2006 
- first version worth releasing