@@ -2,4 +2,6 @@
 
 A simple unit test framework for C and C++ programs.
 
-All code released under the MIT License.
+For now, see http://wiki.u32.net/MuTest
+
+All code is released under the MIT License.
