@@ -2,12 +2,13 @@
  * Scott Bronson
  * 28 Feb 2007
  * 
- * This file is released under the MIT License.
- * See http://en.wikipedia.org/wiki/MIT_License for more.
- *
  * Specifies a main routine so that mutest can be compiled standalone.
  * Requires all_tests(), a routine that runs all tests for the
  * current project, to be defined in another file.
+ *
+ * Copyright (C) 2007 Scott Bronson
+ * This file is released under the MIT License.
+ * See http://en.wikipedia.org/wiki/MIT_License for more.
  */
 
 #include "mutest.h"
